# farcaster-core

./: Cargo.toml
src/: blockchain.rs  consensus.rs  crypto.rs  lib.rs  negotiation.rs  role.rs
src/bitcoin/: mod.rs
src/blockchain/: bitcoin.rs  monero.rs
src/monero/: mod.rs
src/protocol/: message.rs
src/protocol/message/: mod.rs  tlv.rs
