[package]
name = "farcaster-core"
version = "0.1.0"
authors = ["h4sh3d <h4sh3d@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.26.0"
monero = "0.10.0"
secp256k1 = { version = "0.20.1", features = ["rand-std"] }
curve25519-dalek = "3.0.0"
rand_core = { version = "^0.5.0", features = ["getrandom"] }
internet2 = { git = "https://github.com/internet2-org/rust-internet2.git" }
inet2_derive = "0.4.1"
lightning_encoding = "0.3.11"

[dev-dependencies]
hex = "0.4.2"
